# pbn_node

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  ROADMAP.md  __init__.py  pbn_node.py  pbn_pipeline.py  pbn_renderer.py  pyproject.toml  requirements.txt  skills-lock.json  test_mediapipe.py
backend/: __init__.py  models.py
backend/labeling/: __init__.py  label_placer.py
backend/preprocessing/: __init__.py  normal_features.py  preprocessor.py  protector.py  retinex.py  sapiens_priority.py
backend/quantization/: __init__.py  quantizer.py
backend/segmentation/: __init__.py  segmenter.py
backend/svg_generation/: __init__.py  svg_generator.py
backend/utils/: color.py
backend/vectorization/: __init__.py  vectorizer.py
js/: pbn_preview.js
scratch/: debug_retinex_fix.py
tests/: TESTING.md  conftest.py  pytest.ini  run_tests.py
tests/integration/: test_nodes.py  test_perception_integration.py  test_pipeline.py  test_pipeline_visuals.py
tests/unit/: test_lineart_effectiveness.py  test_normal_features.py  test_normal_slic.py  test_pbn_node.py  test_pbn_renderer.py  test_perception_stack.py  test_preprocessing.py  test_quality_improvements.py  test_quantization.py  test_regression_pbn_bugs.py  test_renderer.py  test_retinex.py  test_segmentation.py
