[project]
name = "comfyui-paint-by-numbers"
version = "1.0.0"
description = "A ComfyUI custom node that transforms images into high-quality paint-by-number templates."
license = "MIT"
requires-python = ">=3.10"

[tool.comfy]
PublisherId = "tazztone"
DisplayName = "Paint By Number"
Icon = "🎨"

[tool.ruff]
# Target Python 3.10
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E, W), and Isort (I)
select = ["F", "E", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "numpy.*",
    "torch.*",
    "shapely.*",
    "sklearn.*",
    "networkx.*",
    "kneed.*",
    "comfy_api.*"
]
ignore_missing_imports = true
